After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779293 - Various fixes for 1.47.91
Various fixes for 1.47.91
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Philip Chimento
gjs-maint
Depends on:
Blocks:
 
 
Reported: 2017-02-27 00:57 UTC by Philip Chimento
Modified: 2017-02-28 00:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
tests: Correct skip message (966 bytes, patch)
2017-02-27 00:57 UTC, Philip Chimento
committed Details | Review
fundamental: Root constructor name (2.67 KB, patch)
2017-02-27 00:57 UTC, Philip Chimento
committed Details | Review
maint: Fix memory leaks (2.78 KB, patch)
2017-02-27 00:57 UTC, Philip Chimento
committed Details | Review

Description Philip Chimento 2017-02-27 00:57:21 UTC
Misc patches for the upcoming release for maintenance issues that I
encountered while investigating other things.
Comment 1 Philip Chimento 2017-02-27 00:57:25 UTC
Created attachment 346780 [details] [review]
tests: Correct skip message
Comment 2 Philip Chimento 2017-02-27 00:57:28 UTC
Created attachment 346781 [details] [review]
fundamental: Root constructor name

This did not cause any problems so far, but we should be rooting the
constructor name jsid output parameter while finding the correct jsid to
fill it with.
Comment 3 Philip Chimento 2017-02-27 00:57:32 UTC
Created attachment 346782 [details] [review]
maint: Fix memory leaks

Some memory leaks uncovered by Valgrind.
Comment 4 Cosimo Cecchi 2017-02-27 16:25:39 UTC
Review of attachment 346780 [details] [review]:

Ok
Comment 5 Cosimo Cecchi 2017-02-27 16:26:40 UTC
Review of attachment 346781 [details] [review]:

Looks good
Comment 6 Cosimo Cecchi 2017-02-27 16:27:35 UTC
Review of attachment 346782 [details] [review]:

Sure
Comment 7 Philip Chimento 2017-02-28 00:00:14 UTC
Attachment 346780 [details] pushed as b0cb2a9 - tests: Correct skip message
Attachment 346781 [details] pushed as 48dc12c - fundamental: Root constructor name
Attachment 346782 [details] pushed as 165b5b9 - maint: Fix memory leaks