fundamental: Root constructor name

This did not cause any problems so far, but we should be rooting the
constructor name jsid output parameter while finding the correct jsid to
fill it with.

https://bugzilla.gnome.org/show_bug.cgi?id=779293